--- a/MrFujiBot/MrFujiBot.csproj
+++ b/MrFujiBot/MrFujiBot.csproj
@@ -86,6 +86,8 @@
       <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Mono.Data.Sqlite" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
@@ -104,12 +106,19 @@
     <Compile Include="ITextHandler.cs" />
     <Compile Include="Command.cs" />
     <Compile Include="Commands\PokemonCommand.cs" />
+    <Compile Include="PokemonFactory.cs" />
+    <Compile Include="Pokemon.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Resources\MrFujiBot.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Commands\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
